Add worker and create post functionality

--- a/static/app/css/index.scss
+++ b/static/app/css/index.scss
@@ -87,6 +87,9 @@ h1 {
     #create-rule-button {
         margin-bottom: 25px;
     }
+    #create-post-button {
+        margin-bottom: 25px;
+    }
     .button-container {
         text-align: right;
     }
